# plan-migration

./: .gitignore  README.md  config.yml  pyproject.toml  tasks.json
data/: Voortgang Productenlijst en Delivery plan.xlsx  product_sources.xlsx  task_status.xlsx  tasks.json
src/: main.py
src/build_tree/: __init__.py  build_tree.py
src/dash/: app.py
src/dashboard/: __init__.py  app.py  charts.py
src/dependencies/: __init__.py  build_tree.py  dependency_reporting.py  dependency_tree.py  tasks.json
src/importer/: __init__.py  importer.py
src/importers/: __init__.py  importer.py  prod_transform.py  products.py  task_status.py
