[project]
name = "plan-migration"
version = "0.1.0"
requires-python = ">=3.13.0"
authors = [{ name = "Mark Zwart", email = "mark.zwart@pobox.com" }]
dependencies = [
    "asttokens==3.0.0",
    "decorator==5.2.1",
    "et_xmlfile==2.0.0",
    "executing==2.2.0",
    "fastexcel==0.14.0",
    "igraph==0.11.8",
    "ipython==9.2.0",
    "ipython_pygments_lexers==1.1.1",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "jsonpickle==4.0.5",
    "MarkupSafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "polars==1.29.0",
    "prompt_toolkit==3.0.51",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "pyarrow==20.0.0",
    "Pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyvis==0.3.2",
    "six==1.17.0",
    "stack-data==0.6.3",
    "texttable==1.7.0",
    "traitlets==5.14.3",
    "tzdata==2025.2",
    "wcwidth==0.2.13",
    "XlsxWriter==3.2.3"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
